cambiando el html para la prueba

--- a/Prueba.html
+++ b/Prueba.html
@@ -7,8 +7,8 @@
     <title>Prueba colaborativa</title>
 </head>
 <body>
-
-    <p> Esto es una prueba jeje</p>
+    
+    <p> Esto es una prueba jeje <strong>otra prueba (:</strong></p>
     
 </body>
 </html>
